# servers-drones

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
data/: out.txt  servers.txt
data/assets/texture/: drone.tga  master.tga  server.tga  server1.tga
data/config/: config.hpp  data.txt  quad.txt  servers.txt  triangle.txt
lib/glutInterface/: CMakeLists.txt  glutWindow.cpp  glutWindow.h
src/: Window.cpp  Window.hpp
src/controller/: CollisionController.cpp  CollisionController.hpp  Controller.cpp  Controller.hpp  DiagramController.cpp  DiagramController.hpp  DirectionController.cpp  DirectionController.hpp  ServerController.cpp  ServerController.hpp  ZoneController.cpp  ZoneController.hpp
src/core/: ServiceContainer.cpp  ServiceContainer.hpp  ServiceProvider.cpp
src/core/event/: Event.cpp  Event.hpp  EventManager.cpp  EventManager.hpp
src/core/event/input/: InputManager.cpp  InputManager.hpp
src/core/event/internal/: AddDroneEvent.cpp  AddDroneEvent.hpp  AddServerAtOriginEvent.cpp  AddServerAtOriginEvent.hpp  AddServerAtPositionEvent.cpp  AddServerAtPositionEvent.hpp  AddServerEvent.cpp  AddServerEvent.hpp  BackgroundReadyEvent.cpp  BackgroundReadyEvent.hpp  ChangeSelectionColorEvent.cpp  ChangeSelectionColorEvent.hpp  ChangeServerColorEvent.cpp  ChangeServerColorEvent.hpp  ClearSelectionEvent.cpp  ClearSelectionEvent.hpp  CollisionDetectEvent.cpp  CollisionDetectEvent.hpp  ConfigSaveEvent.cpp  ConfigSaveEvent.hpp  DeleteDroneEvent.cpp  DeleteDroneEvent.hpp  DeleteSelectionEvent.cpp  DeleteSelectionEvent.hpp  DeleteServerEvent.cpp  DeleteServerEvent.hpp  DiagramChangeEvent.cpp  DiagramChangeEvent.hpp  DroneChangeZoneEvent.cpp  DroneChangeZoneEvent.hpp  DroneConfigChangeEvent.cpp  DroneConfigChangeEvent.hpp  DroneTargetChangeEvent.cpp  DroneTargetChangeEvent.hpp  DroneZoneChangeEvent.cpp  DroneZoneChangeEvent.hpp  EventType.cpp  EventType.hpp  FrameUpdateEvent.cpp  FrameUpdateEvent.hpp  (+18 more)
src/core/io/command/: Command.cpp  Command.hpp  CommandContainer.cpp  CommandContainer.hpp  CommandParser.cpp  CommandParser.hpp  CommandWrapper.cpp  CommandWrapper.hpp
src/core/io/command/internal/: ConfigCommand.cpp  ConfigCommand.hpp  HelpCommand.cpp  HelpCommand.hpp
src/core/io/reader/: FileStream.cpp  FileStream.hpp
src/core/service/: ServiceContainer.hpp  ServiceProvider.hpp
src/gui/: Window.cpp  Window.hpp
src/gui/drawable/: Circumscribe.cpp  Circumscribe.hpp  Drawable.cpp  Drawable.hpp  DroneDrawable.cpp  DroneDrawable.hpp  ServerDrawable.cpp  ServerDrawable.hpp
src/model/: Circle.cpp  Circle.hpp  Determinant.cpp  Determinant.hpp  Drone.cpp  Drone.hpp  Matrix.hpp  Matrix.tcc  Mesh.cpp  Mesh.hpp  MyPolygon.cpp  MyPolygon.hpp  Polygon.cpp  Polygon.hpp  Position.cpp  Position.hpp  Server.cpp  Server.hpp  ServerManager.cpp  ServerManager.hpp  Triangle.cpp  Triangle.hpp  Vector2D.cpp  Vector2D.hpp  VoronoiDiagram.cpp  VoronoiDiagram.hpp  Window.cpp  Window.hpp  determinant.cpp  determinant.hpp  info.txt
src/model/matrix/: Matrix.hpp  Matrix.tcc  determinant.cpp  determinant.h
src/model/mesh/: Mesh.hpp
src/model/triangle/: Triangle.h
src/model/vector2D/: Vector2D.cpp  Vector2D.hpp
src/model/window/: Window.hpp
src/util/: ArrayUtil.cpp  ArrayUtil.hpp  StringUtil.cpp  StringUtil.hpp  TypeUtil.hpp  VectorUtil.hpp  VectorUtil.tcc
src/util/vector_util/: VectorUtil.tcc
src/view/: DroneView.cpp  DroneView.hpp  PolygonView.cpp  PolygonView.hpp  ServerView.cpp  ServerView.hpp  TextureView.cpp  TextureView.hpp  TriangleView.cpp  TriangleView.hpp  View.cpp  View.hpp  VoronoiDiagramView.cpp  VoronoiDiagramView.hpp
test/: DroneTest.cpp  Vector2DTest.cpp
